Limit which branches are tested.
Using gFTL to learn about travis without impacting larger project
where this is a more important issue.   Less visibility here when
things go wrong.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: false
 dist: trusty
 language: c
 
+if: (branch IN (master, develop)) OR (branch =~ /^test\/*$/)
+
 matrix:
    include:
       - os: linux
