--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: false
 dist: trusty
 language: c
 
-if: (branch IN (master, develop))
+if: ((branch IN (master, develop)) OR (branch =~ /^test\/*$/))
 
 matrix:
    include:
